mise à jour des modifications général

--- a/restaurants/A-la-francaise.html
+++ b/restaurants/A-la-francaise.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="../assets/css/style.css">
 
 
-    <title>Document</title>
+    <title>À la française</title>
 </head>
 <body>
     <!--HEADER-->
