Modifications apportées à la flèche, l'ombre du header,fond de couleur du titre, titre sur deux lignes, les paragraphes centrés dans Fonctionnement et l'ellipsis du h3 et p au survol des plats pour mobile

--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
     <footer class="footer">
       <p class="footer__logo "><a href="../index.html">ohmyfood </a></p>
       <div class="footer__link">
-          <i class="footer__i fa-solid fa-utensils "></i>
-          <p class="footer__p">Proposer un restaurant</p> 
+          <i class=" margin footer__i fa-solid fa-utensils "></i>
+          <p class="footer__p ">Proposer un restaurant</p> 
       </div>
       <div class="footer__link">
           <i class="footer__i fa-solid fa-handshake-angle"></i>
-          <p class="footer__p">Devenir partenaire</p> 
+          <p class=" footer__p">Devenir partenaire</p> 
       </div>
       <a href="#"><div class="footer__link">Mentions légales</div> </a>
       <a href="mailto:adresse_email@example.com"> <div class="footer__link">Contact</div></a>
