--- a/restaurants/La-note-enchantee.html
+++ b/restaurants/La-note-enchantee.html
@@ -212,7 +212,7 @@
     <footer class="footer">
         <p class="footer__logo "><a href="../index.html">ohmyfood </a></p>
         <a href="#"><div class="footer__link">
-            <i class="footer__i fa-solid fa-utensils "></i>
+            <i class=" margin footer__i fa-solid fa-utensils "></i>
             <p class="footer__p">Proposer un restaurant</p> 
         </div></a>
         <a href="#"><div class="footer__link">
