--- a/restaurants/Le-delice-des-sens.html
+++ b/restaurants/Le-delice-des-sens.html
@@ -196,11 +196,11 @@
     <footer class="footer">
         <p class="footer__logo "><a href="../index.html">ohmyfood </a></p>
         <a href="#"><div class="footer__link">
-            <i class="footer__i fa-solid fa-utensils "></i>
+            <i class=" margin footer__i fa-solid fa-utensils "></i>
             <p class="footer__p">Proposer un restaurant</p> 
         </div></a>
         <a href="#"><div class="footer__link">
-            <i class="footer__i fa-solid fa-handshake-angle"></i>
+            <i class=" footer__i fa-solid fa-handshake-angle"></i>
             <p class="footer__p">Devenir partenaire</p> 
         </div></a>
         <a href="#"><div class="footer__link">Mentions légales</div> </a>
